# Dynamic-KD-Trees-for-Taxi-System

./: .gitignore  README.md
backend/: CMakeLists.txt  server.js
backend/include/: dynamic_kd_tree.h  graph.h  kd_tree.h  kdnode.h  point.h  taxi.h
backend/src/: dynamic_kd_tree.cpp  graph.cpp  main.cpp  taxi.cpp
frontend-core/: README.md  package-lock.json  package.json
frontend-core/src/: index.js
frontend-core/src/api/: taxiService.js
frontend-core/src/hooks/: useTaxiBooking.js
frontend-core/src/utils/: validation.js
frontend-ui/: README.md  package-lock.json  package.json
frontend-ui/public/: index.html
frontend-ui/src/: App.js
frontend-ui/src/components/: BookingResult.js  CoordinateInput.js  ErrorDisplay.js  Header.js  RideResult.js  StatusVisual.js  TaxiGraph.js  TaxiResult.js
